[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wanntb"
dynamic = ["version"]

authors = [
    {name = 'Jie-Xiang Yu', email = 'kaelthas.yu@gmail.com'},
    {name = 'Hong-Fei Huang'},
    {name = 'Bao-Feng Chen', email = 'baofengchen2024@gmail.com'}
]
description = 'Toolkits based on WF based tight-binding Hamiltonian'
readme = 'README.md'
dependencies = ['numpy>1.16', 'numba>0.50', 'pandas']
requires-python = ">= 3.10"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
'*' = ['*.yml']

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"