[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "wanntb"
version = "2026.3.20"
authors = [{name = 'Jie-Xiang Yu', email = 'kaelthas.yu@gmail.com'},
    {name = 'Sheng Pan'},
    {name = 'Jia-Lu Fu'},
    {name = 'Hong-Fei Huang'},
    {name = 'Bao-Feng Chen', email = 'baofengchen2024@gmail.com'}]
description = 'Toolkits based on WF based tight-binding Hamiltonian'
readme = 'README.md'
dependencies = ['numpy>1.16', 'numba>0.50', 'pandas', 'spglib>2.5']
requires-python = ">= 3.10"
license = {text = "MIT License"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
'*' = ['*.yml']